# eeg-site-effects

./: .gitignore  MEETING_SUMMARY.md  README.md  experiment_filters.py  pyproject.toml  requirements.txt
.claude/: FUTURE_IMPROVEMENTS.md
_archive/: run_filter_comparison.sh  szpitale_LOO.ipynb  test.py
experiments/: README.md  feature_ablation_newlabels.py
experiments/configs/: dann_best_pathology_classification.yaml  dann_best_site_classification.yaml  dann_pathology_classification.yaml  dann_pathology_classification_newlabels.yaml  dann_site_classification.yaml  dann_site_classification_newlabels.yaml  pathology_classification.yaml  pathology_classification_newlabels.yaml  pca_sensitivity.yaml  pca_sensitivity_newlabels.yaml  site_classification.yaml  site_classification_newlabels.yaml
experiments/ml/: pathology_classification.py  pca_sensitivity.py  site_classification.py  tune_catboost_pca.py
experiments/preprocessing/: anonymize_hospital_ids.py  convert_dann_to_csv.py  filter_comparison.py
notebooks/: 01_data_exploration_and_selection.ipynb
notebooks/01_data_analysis/: 01_dataset_preparation.ipynb  02_data_exploration_and_selection.ipynb
notebooks/01_exploratory_analysis/: 01_dataset_characterization.ipynb  02_signal_quality_characterization.ipynb
notebooks/01_site_classification/: 05_site_classification_catboost.ipynb  (+2 more)
paper/: bachelor2025eng.cls
scripts/: plot_k_calibration_sweep.py  plot_lr_cb_gap.py  prepare_dann_features.py  prepare_new_labels.py  relabel_hospitals.py  run_baseline_2layer.sh
thesis/: bibliography.bib  pracaLicencjacka.tex
(+180 files in other folders)
