[project]
name = "eeg-site-effects"
version = "0.1.0"
description = "Analysis of site effects in multi-center EEG data"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
